# apex-dashboard

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: refresh-data.yml
retriever/: README.md  retrieve_stats.py
retriever/data/: latest_profiles.json
retriever/data/snapshots/: all_profiles_20260217T025058Z.json  all_profiles_20260218T131548Z.json
src/components/: PlayerCard.astro
src/layouts/: Layout.astro
src/lib/: profiles.ts
src/pages/: index.astro
tests/: test_retrieve_stats.py
tests/fixtures/: transform_profile_cases.json
